src/styles/menu.module.scss
.MenuWrapper {
  display: flex;
  justify-content: center;
  align-items: center;

  .MenuToggler {
    color: orangered;
    width: 100%;
    margin: 0 auto;
    text-align: center;
    display: inline-block;
    border: 1px solid transparent;
    border-radius: 30px;
    order: 2;

    .showMenu {
      margin: 0 auto;
      display: inline-block;
      background: var(--brand-color-peach);
      border-radius: 50px;
      padding: 10px 15px;
      border-bottom: 0 none;

      &:hover {
        background: #18181e;
      }
    }

    @media only screen and (min-width: 767px) {
      & {
        display: none !important;
        order: 1;
      }
    }
  }

  .Menu {
    position: absolute;
    top: 80%;
    left: 0;
    width: 100%;
    background: var(--brand-color-cream);
    font-family: 'Lato', sans-serif;
    font-size: 0.6em;
    font-style: normal;
    font-weight: 700;
    letter-spacing: 0.167em;
    list-style: none;
    margin: 0;
    text-align: center;
    text-transform: uppercase;
    transition: opacity 300ms, visibility 300ms;
    visibility: hidden;
    opacity: 0;
    height: 100vh;

    :hover {
      background: var(--brand-color-cream);
    }

    &.MenuOpen {
      visibility: visible;
      opacity: 1;
    }

    @media only screen and (min-width: 767px) {
      position: initial;
      height: initial;
      order: 2;
      background: transparent !important;
      display: flex !important;
      opacity: 1;
      visibility: visible;

      ul {
        margin: 0;
        padding: 0;
        display: flex;
        align-items: center;
        justify-content: center;
      }

      ul li {
        list-style: none;
        margin: 0 1em;
        border: 0 none !important;
      }

      ul li a {
        border-bottom: 0 none;
        text-decoration: none;
        font-stretch: 100%;
        padding: 1em;
      }
    }

    ul {
      list-style: none;
      margin: 0 auto;
    }

    ul li {
      border-bottom: 1px solid #ccc;
      margin: 0;
    }

    a {
      width: 100%;
      color: var(--text-base-color);
      border-bottom: 0 none;
      text-align: center;

      display: block;
      padding: 1.5em;
      transition: background-color 0.25s ease-in-out 0s;
    }

    a:hover {
      color: var(--brand-color-peach);
    }
  }

  .darkModeButton {
    background: none;
    border: 0 none;
    font-size: 1.1em;
    color: var(--text-base-color);
    cursor: pointer;
    outline: none;
    padding: 1em;
    order: 3;

    &:hover {
      transform: rotate(-30deg);
      transition: transform 100ms;
    }

    @media only screen and (max-width: 767px) {
      order: 1;
    }
  }
}

.MenuOpenButton {
  background-color: #18181e;
  color: #fff !important;
  border-radius: 50% 50% 0 0 !important;
  margin-bottom: -2px;
}

